# strata-fit-data-schema

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: docker-image.yml
api/: logic.py  main.py
config/: __init__.py  settings.yaml
scripts/: __init__.py  validate.py
strata_fit_v6_data_validator_py/: __init__.py  logic.py  main.py  schema.py  v6_utils.py
tests/: federated_run.py  mock_client.py
